# ADL_group_T

./: .gitignore  Part_A_groupT.ipynb  Part_B_groupT.ipynb  README.md  pyproject.toml  requirements.txt
