[project]
name = "group-t-adl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "python-decouple>=3.8",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "wandb>=0.21.1",
]
