[project]
name = "group-t-adl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "emot>=3.1",
    "ftfy>=6.3.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tldextract>=5.3.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "urlextract>=1.9.0",
    "wandb>=0.21.1",
    "wordcloud>=1.9.4",
]
